--- a/.github/workflows/update_rsi.yml
+++ b/.github/workflows/update_rsi.yml
@@ -1,35 +1,25 @@
 name: Update RSI Data
 
 on:
-  schedule:
-    - cron: '*/15 * * * *'  # Runs every 15 minutes
   workflow_dispatch:
+  schedule:
+    - cron: "*/15 * * * *"  # Every 15 minutes
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.10"
 
-    - name: Install dependencies
-      run: |
-        pip install yfinance pandas pandas_ta
+      - name: Install dependencies
+        run: |
+          pip install setuptools
+          pip
 
-    - name: Run RSI script
-      run: |
-        python rsi_script.py  # Replace with your actual script name
-
-    - name: Commit and push changes
-      run: |
-        git config --global user.name 'github-actions'
-        git config --global user.email 'github-actions@github.com'
-        git add nasdaq_rsi.json
-        git commit -m 'Update RSI data'
-        git push
