--- a/.github/workflows/update_rsi.yml
+++ b/.github/workflows/update_rsi.yml
@@ -1,25 +1,42 @@
 name: Update RSI Data
 
 on:
-  workflow_dispatch:
-  schedule:
-    - cron: "*/15 * * * *"  # Every 15 minutes
+  workflow_dispatch:  # Manually trigger workflow
+  schedule:  # Auto-run every 15 minutes
+    - cron: "*/15 * * * *"
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the code
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # Step 2: Set up Python 3.10
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
 
+      # Step 3: Install dependencies
       - name: Install dependencies
         run: |
           pip install setuptools
-          pip
+          pip install yfinance pandas pandas_ta
+
+      # Step 4: Run the RSI script
+      - name: Run RSI script
+        run: python rsi_script.py
+
+      # Step 5: Commit and push changes (if there are any)
+      - name: Commit and push changes
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add -A  # Stage all changes, including new files
+          git commit -m "Update RSI data" || echo "No changes to commit"
+          git push
+
 
