--- a/.github/workflows/update_rsi.yml
+++ b/.github/workflows/update_rsi.yml
@@ -21,13 +21,15 @@ jobs:
 
     - name: Install dependencies
       run: |
+        pip install --upgrade pip
         pip install setuptools
-        pip install numpy==1.23.0  # Ensure compatibility with pandas_ta
-        pip install yfinance pandas pandas_ta==0.3.14 beautifulsoup4 requests
+        pip install numpy==1.24.2  # A more recent numpy version
+        pip install yfinance pandas pandas_ta beautifulsoup4 requests
 
     - name: Run RSI calculation script
       run: |
         python rsi_script.py
+
 
 
 
