--- a/.github/workflows/update_rsi.yml
+++ b/.github/workflows/update_rsi.yml
@@ -22,13 +22,14 @@ jobs:
     - name: Install dependencies
       run: |
         pip install --upgrade pip
-        pip install setuptools
-        pip install numpy==1.24.2  # A more recent numpy version
+        pip install setuptools==57.5.0  # Pinning setuptools version
+        pip install numpy==1.24.2  # Precompiled numpy version
         pip install yfinance pandas pandas_ta beautifulsoup4 requests
 
     - name: Run RSI calculation script
       run: |
         python rsi_script.py
+
 
 
 
